20_11_2022 Corrected methods of services author, book user. The tests work by checking for a positive event outcome.